--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
 
-        <form action="">
+        <form action="https://api.sheetmonkey.io/form/jkqhXBEj8punqhaUh9nsV1">
             <!--text input-->
             <label>Last Name, First Name</label><br>
             <input type="text" id="name" name="name"><br>
