--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <input type="checkbox" id="other" name="region"><label>I haven't left the country</label><br>
             <br>
             <!--radio input-->
-            <label>How many languages can you speak?</label><br>
+            <label>How many languages can you speak (or are learning to speak)?</label><br>
             <input type="radio" id="one" name="choice" value="1"><label>1</label>
             <input type="radio" id="two" name="choice" value="2"><label>2</label>
             <input type="radio" id="three" name="choice" value="3"><label>3</label>
